FEAT: add migration to add column updated_at
