# docs/swagger.json
@@ -961,6 +961,13 @@
                 "summary": "Update a user",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "description": "User Data",
                         "name": "payload",
                         "in": "body",
